--- a/burla.html
+++ b/burla.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Founder Mode</title>
+    <title>La Burla</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/Iosevka/6.0.0/iosevka/iosevka.min.css"
